<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtAngkaDuaForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/textView2"
        android:minHeight="48dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/operatorForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtAngkaSatuForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/txtAngkaDuaForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toEndOf="@+id/TextView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SmallSp,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/operatorForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256"
        tools:ignore="SmallSp,SpeakbleTextPresentCheck" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Angka 1 / Alas :"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <!--    <Button-->
<!--        android:id="@+id/buttonmul"-->
<!--        android:layout_width="248dp"-->
<!--        android:layout_height="51dp"-->
<!--        android:text="Perkalian"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.496"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonmin"-->
<!--        app:layout_constraintVertical_bias="0.054" />-->

<!--    <Button-->
<!--        android:id="@+id/buttonmin"-->
<!--        android:layout_width="248dp"-->
<!--        android:layout_height="51dp"-->
<!--        android:text="Pengurangan"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.496"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonplus"-->
<!--        app:layout_constraintVertical_bias="0.054" />-->

<!--    <Button-->
<!--        android:id="@+id/buttondiv"-->
<!--        android:layout_width="248dp"-->
<!--        android:layout_height="51dp"-->
<!--        android:text="Pembagian"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.496"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/buttonmul"-->
<!--        app:layout_constraintVertical_bias="0.054" />-->


    <Button
        android:id="@+id/buttonconfirm"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#09bfb8"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teksHasil"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/buttonSegitiga"
        android:layout_width="248dp"
        android:layout_height="51dp"

        android:backgroundTint="#09bfb8"
        android:text="@string/luas_segitiga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonconfirm"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/buttonCompare"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:backgroundTint="#09bfb8"
        android:text="@string/compare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSegitiga"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/buttonSuit"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:backgroundTint="#09bfb8"
        android:text="@string/suit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompare"
        app:layout_constraintVertical_bias="0.059" />


    <Button
        android:id="@+id/tebakAngka"
        android:layout_width="248dp"
        android:layout_height="51dp"
        android:backgroundTint="#09bfb8"
        android:text="guess number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSuit"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angka_2_tinggi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView1"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/teksHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/hasil"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operatorForm"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/strip"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operatorForm"
        app:layout_constraintVertical_bias="0.034" />

    <!--    <LinearLayout-->
<!--        android:id="@+id/root"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->

<!--        <TextClock-->
<!--            android:id="@+id/dateText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:format12Hour="@string/date_text_format_12h"-->
<!--            android:format24Hour="@string/date_text_format_24h"-->
<!--            android:gravity="bottom|center_horizontal"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="@dimen/date_text_size_default"/>-->

<!--        <TextClock-->
<!--            android:id="@+id/timeText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:format12Hour="@string/time_text_format_12h"-->
<!--            android:format24Hour="@string/time_text_format_24h"-->
<!--            android:gravity="top|center_horizontal"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:textSize="@dimen/time_text_size_default"-->
<!--            android:textStyle="bold"/>-->

<!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>